# buildroot-agent

./: .coverage  .gitignore  0001-include-sys-sysmacros.h-for-major-minor.patch  AGENTS.md  ARCHITECTURE.md  BUILD.md  CONSTRAINTS.md  LICENSE  Makefile  PITFALLS.md  PROTOCOL.md  README.md  STYLE.md  TASK_DECOMPOSITION.md  TESTING.md  UPDATE_ANALYSIS.md  UPDATE_TEST_COMPLETE_REPORT.md  agent.conf  create_test_packages.sh  generate_test_report.py  mock_update_scenarios.py  render.yaml  setup_test_environment.sh  test_device.py  test_report.json  web_console.html
.github/workflows/: ci.yml  cross-compile.yml  deploy-web.yml  postmortem-check.yml  postmortem-generate.yml  postmortem-trigger.yml
.opencode/: opencode.json
buildroot-agent/: CHANGELOG.md  CMakeLists.txt  Config.in  Dockerfile.x86  Makefile  agent.cfg  agent.conf  agent.conf.example  agent.yaml  buildroot-agent.mk  test_gen.yaml  test_ping.sh  test_ping.yaml  test_ping_debug.yaml
buildroot-agent/cmake/: arm-buildroot.cmake  arm-github-actions.cmake
buildroot-agent/config/: render-agent.yaml
buildroot-agent/doc/: MANIFEST.in  README.md
buildroot-agent/include/: agent.h
buildroot-agent/include/twin/: mqtt_client.h  twin_diff.h  twin_state.h  twin_sync.h
buildroot-agent/scripts/: S99agent  agent.conf.sample  build.sh  install.sh  ping.conf  release.sh
buildroot-agent/src/: agent_config.c  agent_config.c.backup  agent_config_file.c  agent_http.c  agent_log.c  agent_main.c  agent_ping.c  agent_protocol.c  agent_pty.c  agent_script.c  agent_socket.c  agent_status.c  agent_tcp_download.c  agent_twin.c  agent_update.c  agent_util.c  agent_websocket.c  agent_yaml.c  agent_yaml.c.backup  agent_yaml.c.bad  agent_yaml.c.before_fix  agent_yaml.c.clean  agent_yaml.c.new  mqtt_client.c
buildroot-agent/src/twin/: twin_diff.c  twin_state.c  twin_sync.c
buildroot-agent/tests/: CMakeLists.txt  build_tests.sh  mock_server.py  test_json.c  test_json_standalone.c  test_main.c  test_protocol.c  test_socket.c  test_util.c
buildroot-infra/: .env.example  README.md  docker-compose.yml
buildroot-infra/alertmanager/: alertmanager.yml
buildroot-infra/emqx/: acl.conf  emqx.conf
buildroot-infra/prometheus/: prometheus.yml
buildroot-server/: .coverage  .env.example  .gitignore  check_db.py  config.yaml  coverage.xml  main.py  pyproject.toml  server_example.py  start_mock_agent.py  update_handlers_patch.py  update_manager.py  updates  versions.json
buildroot-server-rs/: Cargo.toml  PLAN.md
buildroot-server-rs/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
buildroot-server-rs/src/agent/: handler.rs  mod.rs  protocol.rs  registry.rs
buildroot-server-rs/src/api/v1/: mod.rs  twin.rs
buildroot-server-rs/src/db/: postgres.rs
buildroot-server-rs/src/emqx/: client.rs  mod.rs  tests.rs
buildroot-server-rs/src/metrics/: mod.rs
buildroot-server-rs/src/models/: mod.rs  twin.rs
buildroot-server-rs/src/mqtt/: client.rs  mod.rs  tests.rs
buildroot-server-rs/src/redis/: client.rs
buildroot-server-rs/src/twin/: mod.rs  service.rs  service_tests.rs  tests.rs
buildroot-server-rs/src/ws/: handler.rs  mod.rs  protocol.rs  registry.rs
buildroot-server/buildroot-agent/: buildroot-agent
buildroot-server/buildroot-agent/doc/: MANIFEST
buildroot-server/config/: settings.py
buildroot-server/console/: interactive.py
buildroot-server/database/: README.md  batch_buffer.py  cache.py  db_manager.py  db_models.py  docker-compose.yaml  models.py  repositories.py  schema.sql  schema.sql.backup  schema_orm.py
buildroot-server/handlers/: __init__.py  auth_handler.py  base.py  command_handler.py  example_db_handler.py  file_handler.py  ping_handler.py  pty_handler.py  register_handler.py  socket_handler.py  system_handler.py  update_handler.py
buildroot-server/managers/: connection.py  connection_db.py  file_transfer.py  update.py
buildroot-server/models/: file_transfer_models.py
buildroot-server/protocol/: codec.py  constants.py
buildroot-server/protocol/models/: __init__.py  auth.py  base.py  command.py  file.py  pty.py  register.py  system.py  update.py
buildroot-server/scripts/: db_maintenance.py
buildroot-server/server/: auth.py  cloud_server.py  http_server.py  websocket_handler.py
buildroot-server/tests/: __init__.py  conftest.py  conftest.py.backup.20260302_074612  integration_test.py  test_connection_manager.py  test_integration.py  test_repositories.py
buildroot-server/tests/fixtures/: mock_agent.py  mock_agent_pty.py
buildroot-server/tests/handlers/: conftest.py  test_pty_handler.py  test_register_handler.py  test_socket_handler.py  test_system_handler.py
buildroot-server/updates/: buildroot-agent-1.1.0-x86_64.tar  buildroot-agent-1.1.0.tar  latest.yml  manifest.json
buildroot-web/: .env.example  QUICKSTART.md  README.md  components.json  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  security_report.md  start.sh  tailwind.config.js  test_report.md  test_xss_fix.js  vite.config.js  vite.config.ts  vitest.config.js  web_console.html  web_console.html.bak
buildroot-web-v2/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
buildroot-web-vue/: DASHBOARD_REDESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: FILE_UPLOAD.md  ROADMAP.md  device-twin-design.md  device-twin-progress.md  device-twin-tasks.md
examples/: server_example.py  test_console_client.py  web_console.html
include/: agent.h
postmortem/: 2026-03-10-ci-cd-issues.md  2026-03-10-code-quality-issues.md  2026-03-10-concurrency-race-conditions.md  2026-03-10-frontend-issues.md  2026-03-10-resource-leaks.md  2026-03-10-security-vulnerabilities.md  README.md
scripts/: S99agent  agent.conf.sample  check_protocol_sync.py  test.sh  update_manifest.py  verify_manifest.py  verify_manifest.sh
src/: agent_config.c  agent_log.c  agent_main.c  agent_protocol.c  agent_pty.c  agent_script.c  agent_status.c  agent_util.c  agent_websocket.c
test_environment/: README.md
test_packages/: buildroot-agent
(+135 files in other folders)
