[project]
name = "buildroot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=16.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "packaging>=23.0",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "aiomysql>=0.2.0",
    "sqlmodel>=0.0.24",
]

